--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-/*here start de website template core*/ /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/*here start de website template core*/
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
