--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,7 +6,7 @@ append config
 	-pageDescription	= 'Pagina inicial de MyBoilerplate'
 block main-header
 block main-container
-	include ../core-modules/core-module
-	include ../internal-modules/internal-module
+	//- include ../core-modules/core-module
+	include ../internal-modules/video-filter
 block main-footer
 block scripts
