--- a/src/scss/internal-modules/_video-filter.scss
+++ b/src/scss/internal-modules/_video-filter.scss
@@ -26,7 +26,7 @@
 		width: 100%;
 		padding: 15px;
 		@include from(1024px){
-			margin-left: 19px;
+			// margin-left: 19px;
 		}
 	}
 	&__content-title{
