--- a/public/styles.css
+++ b/public/styles.css
@@ -451,8 +451,7 @@ ul li {
 }
 
 .video-filter {
-  padding-top: 160px;
-  border: 1px solid red;
+  padding: 160px 0;
   width: 100%;
   max-width: 1620px;
   margin: 0 auto;
@@ -492,13 +491,11 @@ ul li {
   }
 }
 .video-filter__content {
-  border: 1px solid blue;
   width: 100%;
   padding: 15px;
 }
 .video-filter__content-title {
   color: var(--Color-Alias-Text-Primary, #192666);
-  /* Desktop/Heading/Heading2 */
   font-family: Montserrat;
   font-size: 45px;
   font-style: normal;
@@ -512,13 +509,12 @@ ul li {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  row-gap: 50px; /* Gap superior e inferior de 50px */
+  row-gap: 50px;
   -webkit-column-gap: 25px;
      -moz-column-gap: 25px;
-          column-gap: 25px; /* Gap lateral de 25px */
+          column-gap: 25px;
 }
 .video-filter__content-grid-item {
-  border: 1px solid green;
   border-radius: 16px;
   overflow: hidden;
   width: 100%;
@@ -572,12 +568,39 @@ ul li {
   line-height: 120%; /* 24px */
   letter-spacing: -0.2px;
 }
-
-.video-filter-slider {
-  border: 1px solid red;
+.video-filter__controls-input {
+  height: 56px;
+  width: 100%;
+  border-radius: 16px;
+  padding: 0 15px;
+  font-family: Montserrat;
 }
+.video-filter__controls-buttons {
+  padding-top: 30px;
+  padding-bottom: 120px;
+}
+.video-filter__controls-button {
+  width: 118px;
+  height: 49px;
+  color: #004793;
+  /* Desktop/Heading/Bold/Heading6 */
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%; /* 28.8px */
+  letter-spacing: -0.36px;
+  border-radius: 16px;
+}
+.video-filter__controls-button.active {
+  background-color: #004793;
+  color: white;
+}
+.video-filter__content-title-container {
+  padding-bottom: 30px;
+}
+
 .video-filter-slider__item {
-  border: 1px solid blue;
   width: 288px !important;
 }
 @media screen and (min-width: 1024px) {
