--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -2,25 +2,49 @@ section(class='video-filter')
 	div(class='video-filter__left-side-bar')
 		div(class='swiper video-filter-slider')
 			div(class='swiper-wrapper')
-				-for(let i = 1; i<=3; i++ )
+				-for(let i = 1; i <= 3; i++)
 					div(class='swiper-slide video-filter-slider__item')
-						img(src="images/thumbnail2.png", class='swiper-slide video-filter-slider__img' alt="video")
+					img(src="images/thumbnail2.png", class='swiper-slide video-filter-slider__img' alt="video")
 	div(class='video-filter__content')
 		div(class='video-filter__controls')
 			div(class='video-filter__controls-input-container')
-				input(type="text", class='video-filter__controls-input')
-			div(class='video-filter__controls-buttons')
-				button(class='video-filter__controls-button') lorem
-				button(class='video-filter__controls-button') lorem
-				button(class='video-filter__controls-button') lorem
-		div(class='video-filter__content-title-container')
-			h2(class='video-filter__content-title') Lorem, ipsum dolor.
-		div(class='video-filter__content-grid')
-			-for(let i =1; i <=6; i++)
-				div(class='video-filter__content-grid-item')
+				img(src="images/magnifyingglass.svg", alt="")
+				input(type="text", class='video-filter__controls-input', placeholder='search')
+			div(id='myBtnContainer', class='video-filter__controls-buttons')
+				button(class='video-filter__controls-button active', data-filter='all') Show all
+				button(class='video-filter__controls-button', data-filter='cash') Cash
+				button(class='video-filter__controls-button', data-filter='bitcoin') Bitcoin
+			div(class='video-filter__content-title-container')
+				h2(class='video-filter__content-title') Lorem, ipsum dolor.
+			div(class='video-filter__content-grid' id='myGrid')
+				div(class='video-filter__content-grid-item cash')
 					div(class='video-filter__content-grid-item-img-container')
-						img(src="images/thumbnail.png", class='video-filter__content-grid-item-img' alt="")
+						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 1. Full Cash App + Bitcoin Tutorial
-						span(class='video-filter__content-grid-item-sub-title') Cash App
-			
+				div(class='video-filter__content-grid-item bitcoin')
+					div(class='video-filter__content-grid-item-img-container')
+						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+					div(class='video-filter__content-grid-item-title-container')
+						span(class='video-filter__content-grid-item-title') 2. Buying with Cash App
+				div(class='video-filter__content-grid-item bitcoin')
+					div(class='video-filter__content-grid-item-img-container')
+						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+					div(class='video-filter__content-grid-item-title-container')
+						span(class='video-filter__content-grid-item-title') 3. Receiving Bitcoin thru Cash App
+				div(class='video-filter__content-grid-item bitcoin')
+					div(class='video-filter__content-grid-item-img-container')
+						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+					div(class='video-filter__content-grid-item-title-container')
+						span(class='video-filter__content-grid-item-title') 4. Sending Bitcoin thru Cash App
+				div(class='video-filter__content-grid-item bitcoin')
+					div(class='video-filter__content-grid-item-img-container')
+						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+					div(class='video-filter__content-grid-item-title-container')
+						span(class='video-filter__content-grid-item-title') 5. Set up a App Account
+				//- -for(let i = 1; i <= 2; i++)
+				//- 	div(class='video-filter__content-grid-item cash')
+				//- 		div(class='video-filter__content-grid-item-img-container')
+				//- 			img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+				//- 		div(class='video-filter__content-grid-item-title-container')
+				//- 			span(class='video-filter__content-grid-item-title') #{i}. Full Cash App + Bitcoin Tutorial
