--- a/src/pug/internal-modules/video-banner.pug
+++ b/src/pug/internal-modules/video-banner.pug
@@ -1,1 +1,11 @@
 section(class='video-banner')
+	div(class='video-banner__container')
+		div(class='video-banner__container-item')
+			h1(class='video-banner__title') Video Tutorials
+			p(class='video-banner__description') 
+				| Dive into our collection of easy-to-follow video tutorials designed to make depositing 
+				| funds for your online gaming adventures a breeze. Whether you're a seasoned gamer or a newcomer, 
+				| our step-by-step guides will ensure you spend less time figuring out payments and more time enjoying your 
+				| favorite games. Get started today and experience seamless, secure, and swift transactions with BetAnySports.
+		div(class='video-banner__container-item')
+			img(src="images/Hero.png", alt="hero", class='video-banner__container-hero')
