--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -15,7 +15,7 @@ section(class='video-filter')
 				button(class='video-filter__controls-button', data-filter='cash') Cash
 				button(class='video-filter__controls-button', data-filter='bitcoin') Bitcoin
 			div(class='video-filter__content-title-container')
-				h2(class='video-filter__content-title') Lorem, ipsum dolor.
+				h2(class='video-filter__content-title') Step-by-Step Guides
 			div(class='video-filter__content-grid' id='myGrid')
 				div(class='video-filter__content-grid-item cash')
 					div(class='video-filter__content-grid-item-img-container')
