--- a/public/styles.css
+++ b/public/styles.css
@@ -451,6 +451,121 @@ ul li {
   color: red;
 }
 
+.video-banner {
+  background: var(--Gradient-GradiantSlider, radial-gradient(46.5% 73.69% at 42.48% 15.71%, #2A3CDA 1%, #131F9C 100%));
+}
+.video-banner__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 auto;
+  max-width: 1600px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media screen and (min-width: 1440px) {
+  .video-banner__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+.video-banner__container-item {
+  padding: 15px 15px 0 15px;
+}
+.video-banner__container-item:nth-child(1) {
+  width: 100%;
+}
+@media screen and (min-width: 1440px) {
+  .video-banner__container-item:nth-child(1) {
+    width: 40%;
+  }
+}
+.video-banner__container-item:nth-child(2) {
+  width: 100%;
+}
+@media screen and (min-width: 1440px) {
+  .video-banner__container-item:nth-child(2) {
+    width: 60%;
+  }
+}
+.video-banner__container-hero {
+  display: block;
+  line-height: 0;
+  width: 100%;
+  height: auto;
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 1440px) {
+  .video-banner__container-hero {
+    max-width: 100%;
+  }
+}
+.video-banner__title {
+  /* Desktop/Display/Display2 */
+  font-family: Montserrat;
+  font-size: 52px;
+  line-height: 120%; /* 93px */
+  font-style: normal;
+  font-weight: 800;
+  margin: 0 auto;
+  max-width: 260px;
+  letter-spacing: -0.93px;
+  background: var(--Gradient-Gold-NEW-AA, linear-gradient(97deg, #E0AC42 5.53%, #E0AC42 5.53%, #EED688 28.91%, #FFFBCC 55.82%, #E0AC42 93.77%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .video-banner__title {
+    font-size: 93px;
+    line-height: 120%; /* 93px */
+    text-align: center;
+    max-width: 700px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .video-banner__title {
+    max-width: 100%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .video-banner__title {
+    text-align: left;
+  }
+}
+.video-banner__description {
+  display: none;
+  color: var(--Color-Alias-Text-Inverted, #F4F4F4);
+  /* Shadows/Elements/Hero */
+  text-shadow: 5px 5px 10px rgba(0, 7, 15, 0.25);
+  /* Desktop/Body/Medium/Text LG */
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 180%; /* 32.4px */
+  letter-spacing: -0.18px;
+}
+@media screen and (min-width: 768px) {
+  .video-banner__description {
+    display: block;
+    margin: 0 auto;
+    max-width: 537px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .video-banner__description {
+    max-width: 800px;
+  }
+}
+
 .video-filter {
   padding: 160px 0;
   width: 100%;
