--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,7 @@ append config
 block main-header
 block main-container
 	//- include ../core-modules/core-module
+	include ../internal-modules/video-banner
 	include ../internal-modules/video-filter
 block main-footer
 block scripts
