--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -4,16 +4,26 @@ section(class='video-filter')
 			div(class='swiper-wrapper')
 				-for(let i = 1; i <= 3; i++)
 					div(class='swiper-slide video-filter-slider__item')
-					img(src="images/thumbnail2.png", class='swiper-slide video-filter-slider__img' alt="video")
+						img(src="images/thumbnail2.png", class='swiper-slide video-filter-slider__img' alt="video")
 	div(class='video-filter__content')
 		div(class='video-filter__controls')
 			div(class='video-filter__controls-input-container')
 				img(src="images/magnifyingglass.svg", alt="")
 				input(type="text", class='video-filter__controls-input', placeholder='search')
-			div(id='myBtnContainer', class='video-filter__controls-buttons')
-				button(class='video-filter__controls-button active', data-filter='all') Show all
-				button(class='video-filter__controls-button', data-filter='cash') Cash
-				button(class='video-filter__controls-button', data-filter='bitcoin') Bitcoin
+			
+
+
+			div(id='myBtnContainer', class='swiper video-filter-buttons-slider')
+				div(class='swiper-wrapper')
+					div(class='swiper-slide video-filter-buttons-slider__item')
+						button(class='video-filter__controls-button active', data-filter='all') Show all
+					div(class='swiper-slide video-filter-buttons-slider__item')
+						button(class='video-filter__controls-button', data-filter='cash') Cash
+					div(class='swiper-slide video-filter-buttons-slider__item')
+						button(class='video-filter__controls-button', data-filter='bitcoin') Bitcoin
+
+
+
 			div(class='video-filter__content-title-container')
 				h2(class='video-filter__content-title') Step-by-Step Guides
 			div(class='video-filter__content-grid' id='myGrid')
