--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -4,7 +4,7 @@ section(class='video-filter')
 			div(class='swiper-wrapper')
 				-for(let i = 1; i <= 3; i++)
 					div(class='swiper-slide video-filter-slider__item')
-						img(src="images/thumbnail2.png", class='swiper-slide video-filter-slider__img' alt="video")
+						img(src="images/thumbnail2.webp", class='swiper-slide video-filter-slider__img' alt="video")
 	div(class='video-filter__content')
 		div(class='video-filter__controls')
 			div(class='video-filter__controls-input-container')
@@ -29,32 +29,32 @@ section(class='video-filter')
 			div(class='video-filter__content-grid' id='myGrid')
 				div(class='video-filter__content-grid-item cash')
 					div(class='video-filter__content-grid-item-img-container')
-						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 1. Full Cash App + Bitcoin Tutorial
 				div(class='video-filter__content-grid-item bitcoin')
 					div(class='video-filter__content-grid-item-img-container')
-						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 2. Buying with Cash App
 				div(class='video-filter__content-grid-item bitcoin')
 					div(class='video-filter__content-grid-item-img-container')
-						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 3. Receiving Bitcoin thru Cash App
 				div(class='video-filter__content-grid-item bitcoin')
 					div(class='video-filter__content-grid-item-img-container')
-						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 4. Sending Bitcoin thru Cash App
 				div(class='video-filter__content-grid-item bitcoin')
 					div(class='video-filter__content-grid-item-img-container')
-						img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 5. Set up a App Account
 				//- -for(let i = 1; i <= 2; i++)
 				//- 	div(class='video-filter__content-grid-item cash')
 				//- 		div(class='video-filter__content-grid-item-img-container')
-				//- 			img(src='images/thumbnail.png', class='video-filter__content-grid-item-img' alt='')
+				//- 			img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 				//- 		div(class='video-filter__content-grid-item-title-container')
 				//- 			span(class='video-filter__content-grid-item-title') #{i}. Full Cash App + Bitcoin Tutorial
